Create navbar message section

--- a/PaylasimKuresi/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/PaylasimKuresi/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -1,6 +1,6 @@
 <nav id="navbar-main" class="navbar navbar-expand-lg shadow-sm sticky-top">
     <ul class="navbar-nav mr-5" id="main_menu">
-        <a class="navbar-brand nav-item mr-lg-5" href="index.html"><img src="/template/assets/images/logo-64x64.png"
+        <a class="navbar-brand nav-item mr-lg-5" href="/Home/"><img src="/template/assets/images/logo-64x64.png"
                 width="40" height="40" class="mr-3" alt="Logo"></a>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <form class="w-30 mx-2 my-auto d-inline form-inline mr-5">
@@ -48,8 +48,6 @@
         <li class="nav-item dropdown message-drop-li">
             <a href="#" class="nav-link nav-links message-drop" data-toggle="dropdown" role="button"
                 aria-haspopup="true" aria-expanded="false">
-                <i class='bx bxs-message-rounded message-dropdown'></i> <span
-                    class="badge badge-pill badge-primary">1</span>
             </a>
             <ul class="dropdown-menu notify-drop dropdown-menu-right nav-drop">
                 <div class="notify-drop-title">
@@ -62,158 +60,13 @@
                 <!-- end notify title -->
                 <!-- notify content -->
                 <div class="drop-content">
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-6.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-9">
-                            <a href="#" class="notification-user">Susan P. Jarvis</a>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <i class='bx bx-check'></i> This party is going to have a DJ, food, and drinks.
-                                Lorem ipsum dolar sit amet Lorem ipsum dolar sit amet Lorem ipsum dolar sit amet
-                                Lorem ipsum dolar sit amet Lorem ipsum dolar sit amet Lorem ipsum dolar sit amet
-                                Lorem ipsum dolar sit amet Lorem ipsum dolar sit amet Lorem ipsum dolar sit amet
-                            </p>
-                        </div>
-                    </li>
+
                 </div>
                 <div class="notify-drop-footer text-center">
-                    <a href="#">Daha fazlasını gör</a>
+                    <a href="/Messages/">Daha fazlasını gör</a>
                 </div>
             </ul>
         </li>
-        @* Bildirim kısmını kapattım *@
-        @* <li class="nav-item dropdown">
-            <a href="#" class="nav-link nav-links" data-toggle="dropdown" role="button" aria-haspopup="true"
-                aria-expanded="false">
-                <i class='bx bxs-bell notification-bell'></i> <span class="badge badge-pill badge-primary">3</span>
-            </a>
-            <ul class="dropdown-menu notify-drop notify-mobile dropdown-menu-right nav-drop">
-                <div class="notify-drop-title">
-                    <div class="fs-8">Bildirimler <span class="badge badge-pill badge-primary ml-2">3</span>
-                        <a href="#" class="notify-right-icon">
-                            Okundu olarak işaretle
-                            </a>
-                    </div>
-                </div>
-                <!-- end notify title -->
-                <!-- notify content -->
-                <div class="drop-content">
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-10.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                            <a href="#" class="notification-user">Sean</a> <span class="notification-type">replied to
-                                your comment on a post in </span><a href="#" class="notification-for">PHP</a>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <span class="badge badge-pill badge-primary"><i class='bx bxs-group'></i></span> 3h
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-7.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                            <a href="#" class="notification-user">Kimberly</a> <span class="notification-type">likes
-                                your comment "I would really... </span>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <span class="badge badge-pill badge-primary"><i class='bx bxs-like'></i></span> 7h
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-8.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                            <span class="notification-type">10 people saw your story before it disappeared. See who saw
-                                it.</span>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <span class="badge badge-pill badge-primary"><i class='bx bx-images'></i></span> 23h
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-11.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                            <a href="#" class="notification-user">Michelle</a> <span class="notification-type">posted in
-                            </span><a href="#" class="notification-for">Argon Social Design System</a>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <span class="badge badge-pill badge-primary"><i class='bx bxs-quote-right'></i></span>
-                                1d
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-5.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                            <a href="#" class="notification-user">Karen</a> <span class="notification-type">likes your
-                                comment "Sure, here... </span>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <span class="badge badge-pill badge-primary"><i class='bx bxs-like'></i></span> 2d
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="notify-img">
-                                <img src="/template/assets/images/users/user-12.png" alt="notification user image">
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                            <a href="#" class="notification-user">Irwin</a> <span class="notification-type">posted in
-                            </span><a href="#" class="notification-for">Themeforest</a>
-                            <a href="#" class="notify-right-icon">
-                                <i class='bx bx-radio-circle-marked'></i>
-                            </a>
-                            <p class="time">
-                                <span class="badge badge-pill badge-primary"><i class='bx bxs-quote-right'></i></span>
-                                3d
-                            </p>
-                        </div>
-                    </li>
-                </div>
-                <div class="notify-drop-footer text-center">
-                    <a href="#">See More</a>
-                </div>
-            </ul>
-        </li> *@
         <li class="nav-item dropdown d-mobile">
             <a href="#" class="nav-link nav-links nav-icon" data-toggle="dropdown" role="button" aria-haspopup="true"
                 aria-expanded="false"><i class="bx bx-flag"></i></a>
