--- a/PaylasimKuresi/Views/LayoutPartial/_SidebarPartial.cshtml
+++ b/PaylasimKuresi/Views/LayoutPartial/_SidebarPartial.cshtml
@@ -5,14 +5,13 @@
                 <h6>Ana Sayfa</h6>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center sd-active">
-                <a href="index.html" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/newsfeed.png"
+                <a href="/Home/" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/newsfeed.png"
                         alt="newsfeed"> Akış</a>
                 <a href="#" class="newsfeedListicon"><i class='bx bx-dots-horizontal-rounded'></i></a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="messages.html" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/message.png"
+                <a href="/Message/" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/message.png"
                         alt="message"> Mesajlar</a>
-                <span class="badge badge-primary badge-pill">2</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="groups.html" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/group.png"
