--- a/PaylasimKuresi/Views/Shared/Components/_Navbar/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_Navbar/Default.cshtml
@@ -15,6 +15,20 @@
                 </div>
             </div>
         </form>
+
+        <form class="w-25 mx-2 my-auto d-inline form-inline mr-5">
+            <div class="input-group">
+                <select id="country" name="country" class="form-control w-30" 
+                style="border-top-left-radius: 20px; border-bottom-left-radius: 20px; background-color: #e8e8e8;
+                        border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-size: .8em;
+                        border: 1px solid #ccc;">
+                    <option value="usa">United States</option>
+                    <option value="canada">Canada</option>
+                    <option value="uk">United Kingdom</option>
+                    <option value="australia">Australia</option>
+                </select>
+            </div>
+        </form>
         <li class="nav-item btn-group d-mobile">
             <a href="#" class="nav-link nav-icon nav-links" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
