--- a/PaylasimKuresi/Views/LayoutPartial/_SidebarPartial.cshtml
+++ b/PaylasimKuresi/Views/LayoutPartial/_SidebarPartial.cshtml
@@ -14,9 +14,8 @@
                         alt="message"> Mesajlar</a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="groups.html" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/group.png"
+                <a href="/Community" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/group.png"
                         alt="group"> Topluluklar</a>
-                <span class="badge badge-primary badge-pill">17</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="events.html" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/event.png"
