--- a/PaylasimKuresi/Views/Shared/Components/_CommentSection/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_CommentSection/Default.cshtml
@@ -8,7 +8,7 @@
         <div class="col-md-12">
             <div class="comment-wrapper">
                 <div class="panel panel-info">
-                    <div class="panel-body">
+                    <div class="panel-body" style="overflow-y: auto; -ms-overflow-style: none; scrollbar-width: none; ">
                         <ul class="media-list comments-list">
                             <li class="media comment-form">
                                 <a href="#" class="pull-left">
@@ -17,6 +17,7 @@
                                 <div class="media-body">
                                     @using (Html.BeginForm("SendComment", "Home", FormMethod.Post)){
                                         <input type="hidden" name="PostID" value=@Model.ID />
+                                        <input type="hidden" name="CommunityID" value="@Model.CommunityID" />
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="input-group">
