--- a/PaylasimKuresi/Views/Shared/_MessageLayout.cshtml
+++ b/PaylasimKuresi/Views/Shared/_MessageLayout.cshtml
@@ -1,12 +1,13 @@
 <html>
-    @await Html.PartialAsync("/Views/MessageLayoutPartial/_HeadPartial.cshtml");
+@await Html.PartialAsync("/Views/MessageLayoutPartial/_HeadPartial.cshtml")
 
-    <body>
+<body>
 
-        @await Html.PartialAsync("/Views/LayoutPartial/_NavbarPartial.cshtml")
+    @await Component.InvokeAsync("_Navbar")
 
-        @RenderBody();
+    @RenderBody()
 
-        @await Html.PartialAsync("/Views/MessageLayoutPartial/_ScriptPartial.cshtml");
-    </body>
+    @await Html.PartialAsync("/Views/MessageLayoutPartial/_ScriptPartial.cshtml")
+</body>
+
 </html>
