Profile page is created

--- a/PaylasimKuresi/Views/Shared/Components/_Navbar/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_Navbar/Default.cshtml
@@ -2,7 +2,7 @@
 
 <nav id="navbar-main" class="navbar navbar-expand-lg shadow-sm sticky-top">
     <ul class="navbar-nav mr-5" id="main_menu">
-        <a class="navbar-brand nav-item mr-lg-5" href="index.html"><img src="/template/assets/images/logo-64x64.png"
+        <a class="navbar-brand nav-item mr-lg-5" href="/Home/Index"><img src="/template/assets/images/logo-64x64.png"
                 width="40" height="40" class="mr-3" alt="Logo"></a>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <form class="w-30 mx-2 my-auto d-inline form-inline mr-5">
