--- a/PaylasimKuresi/Views/Shared/Components/_PostFlow/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_PostFlow/Default.cshtml
@@ -1,155 +1,160 @@
 @model List<GetPostDto>
+
 @{
     var userLikedPost = ViewBag.UserLikedPosts as ICollection<Models.Entities.PostLike>;
 }
+
 <div class="posts-section mb-5">
     @foreach (var item in Model)
     {
-        <div class="post border-bottom p-3 bg-white w-shadow rounded mt-3">
-            <div class="media text-muted pt-3">
-                <img src=@item.User.ProfilePictureUrl alt="Online user" class="mr-3 post-user-image">
-                <div class="media-body pb-3 mb-0 small lh-125">
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <a href="#" class="text-gray-dark post-user-name">@item.User.FirstName @item.User.LastName</a>
-                        <div class="dropdown">
-                            <a href="#" class="post-more-settings" role="button" data-toggle="dropdown" id="postOptions"
-                                aria-haspopup="true" aria-expanded="false">
-                                <i class='bx bx-dots-horizontal-rounded'></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left post-dropdown-menu">
-                                <a href="#" class="dropdown-item" aria-describedby="savePost">
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                            <i class='bx bx-bookmark-plus post-option-icon'></i>
-                                        </div>
-                                        <div class="col-md-10">
-                                            <span class="fs-9">Gönderiyi kaydet</span>
-                                            <small id="savePost" class="form-text text-muted">Bunu kayıtlı öğelerinize
-                                                ekleyin</small>
-                                        </div>
-                                    </div>
+            <div class="post border-bottom p-3 bg-white w-shadow rounded mt-3">
+                <div class="media text-muted pt-3">
+                    <img src=@item.User.ProfilePictureUrl alt="Online user" class="mr-3 post-user-image">
+                    <div class="media-body pb-3 mb-0 small lh-125">
+                        <div class="d-flex justify-content-between align-items-center w-100">
+                            <a href="#" class="text-gray-dark post-user-name">@item.User.FirstName @item.User.LastName</a>
+                            <div class="dropdown">
+                                <a href="#" class="post-more-settings" role="button" data-toggle="dropdown" id="postOptions"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    <i class='bx bx-dots-horizontal-rounded'></i>
                                 </a>
-                                <a href="#" class="dropdown-item" aria-describedby="hidePost">
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                            <i class='bx bx-hide post-option-icon'></i>
+                                <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left post-dropdown-menu">
+                                    <a href="#" class="dropdown-item" aria-describedby="savePost">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <i class='bx bx-bookmark-plus post-option-icon'></i>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <span class="fs-9">Gönderiyi kaydet</span>
+                                                <small id="savePost" class="form-text text-muted">Bunu kayıtlı öğelerinize
+                                                    ekleyin</small>
+                                            </div>
                                         </div>
-                                        <div class="col-md-10">
-                                            <span class="fs-9">Gönderiyi gizle</span>
-                                            <small id="hidePost" class="form-text text-muted">Bunun gibi daha az gönderi
-                                                görün</small>
+                                    </a>
+                                    <a href="#" class="dropdown-item" aria-describedby="hidePost">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <i class='bx bx-hide post-option-icon'></i>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <span class="fs-9">Gönderiyi gizle</span>
+                                                <small id="hidePost" class="form-text text-muted">Bunun gibi daha az gönderi
+                                                    görün</small>
+                                            </div>
                                         </div>
-                                    </div>
-                                </a>
-                                <a href="#" class="dropdown-item" aria-describedby="snoozePost">
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                            <i class='bx bx-time post-option-icon'></i>
+                                    </a>
+                                    <a href="#" class="dropdown-item" aria-describedby="snoozePost">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <i class='bx bx-time post-option-icon'></i>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <span class="fs-9">Linayı 30 gün boyunca ertele</span>
+                                                <small id="snoozePost" class="form-text text-muted">Gönderileri görmeyi
+                                                    geçici
+                                                    olarak durdur</small>
+                                            </div>
                                         </div>
-                                        <div class="col-md-10">
-                                            <span class="fs-9">Linayı 30 gün boyunca ertele</span>
-                                            <small id="snoozePost" class="form-text text-muted">Gönderileri görmeyi geçici
-                                                olarak durdur</small>
+                                    </a>
+                                    <a href="#" class="dropdown-item" aria-describedby="reportPost">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <i class='bx bx-block post-option-icon'></i>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <span class="fs-9">Şikayet et</span>
+                                                <small id="reportPost" class="form-text text-muted">Bu gönderi hakkında
+                                                    endişeliyim</small>
+                                            </div>
                                         </div>
-                                    </div>
-                                </a>
-                                <a href="#" class="dropdown-item" aria-describedby="reportPost">
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                            <i class='bx bx-block post-option-icon'></i>
-                                        </div>
-                                        <div class="col-md-10">
-                                            <span class="fs-9">Şikayet et</span>
-                                            <small id="reportPost" class="form-text text-muted">Bu gönderi hakkında
-                                                endişeliyim</small>
-                                        </div>
-                                    </div>
-                                </a>
+                                    </a>
+                                </div>
                             </div>
                         </div>
+                        <span class="d-block">@item.CreatedAt.ToString("dd/MM/yyyy")<i class='bx bx-globe ml-3'></i></span>
                     </div>
-                    <span class="d-block">@item.CreatedAt.ToString("dd/MM/yyyy")<i class='bx bx-globe ml-3'></i></span>
                 </div>
-            </div>
-            @{
-                if (item.TextPost != null)
-                {
-                    <div class="mt-3">
-                        <p>@item.TextPost.Content</p>
-                    </div>
+                @{
+                    if (item.TextPost != null)
+                    {
+                        <div class="mt-3">
+                            <p>@item.TextPost.Content</p>
+                        </div>
+                    }
+                    if (item.ImagePost != null)
+                    {
+                        <div class="d-block mt-3">
+                            <img src=@item.ImagePost.Url class="post-content" alt="post image" hidden="">
+                        </div>
+                    }
                 }
-                if (item.ImagePost != null)
-                {
-                    <div class="d-block mt-3">
-                        <img src=@item.ImagePost.Url class="post-content" alt="post image" hidden="">
+                <div class="mb-3">
+                    <!-- Reactions -->
+                    <div class="argon-reaction">
+                        <span class="like-btn">
+                            <a href="javascript:void(0)" class="post-card-buttons reactions" data-post-id="@item.ID">
+                                @{
+                                    if (userLikedPost != null)
+                                    {
+                                        var isLiked = userLikedPost.Where(pl => pl.PostID == item.ID).FirstOrDefault();
+                                        if (isLiked != null)
+                                        {
+                                            <i class="like-icon bx bx-up-arrow-circle" style="color: rgb(2, 132, 254);"></i>
+                                        }
+                                        else
+                                        {
+                                            <i class='like-icon bx bx-up-arrow-circle'></i>
+                                        }
+                                    }
+                                } <span class="like-count" data-post-id="@item.ID">@item.UsersWhoLike.Count</span>
+                            </a>
+                        </span>
                     </div>
-                }
-            }
-            <div class="mb-3">
-                <!-- Reactions -->
-                <div class="argon-reaction">
-                    <span class="like-btn">
-                        <a href="javascript:void(0)" class="post-card-buttons reactions" data-post-id="@item.ID">
-                            @{
-                                if (userLikedPost != null)
-                                {
-                                    var isLiked = userLikedPost.Where(pl => pl.PostID == item.ID).FirstOrDefault();
-                                    if (isLiked != null)
-                                    {
-                                        <i class="like-icon bx bx-up-arrow-circle" style="color: rgb(2, 132, 254);"></i>
-                                    }
-                                    else
-                                    {
-                                        <i class='like-icon bx bx-up-arrow-circle'></i>
-                                    }
-                                }
-                            } <span class="like-count" data-post-id="@item.ID">@item.UsersWhoLike.Count</span>
+                    <a href="javascript:void(0)" class="post-card-buttons show-comments" data-item-id="@item.ID"><i
+                            class='bx bx-message-rounded mr-2'></i> @item.Comments.Count</a>
+                    <div class="dropdown dropup share-dropup">
+                        <a href="#" class="post-card-buttons" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            <i class='bx bx-share-alt mr-2'></i> Paylaş
                         </a>
-                    </span>
-                </div>
-                <a href="javascript:void(0)" class="post-card-buttons show-comments" data-item-id="@item.ID"><i
-                        class='bx bx-message-rounded mr-2'></i> @item.Comments.Count</a>
-                <div class="dropdown dropup share-dropup">
-                    <a href="#" class="post-card-buttons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class='bx bx-share-alt mr-2'></i> Paylaş
-                    </a>
-                    <div class="dropdown-menu post-dropdown-menu">
-                        <a href="#" class="dropdown-item">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <i class='bx bx-share-alt'></i>
+                        <div class="dropdown-menu post-dropdown-menu">
+                            <a href="#" class="dropdown-item">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <i class='bx bx-share-alt'></i>
+                                    </div>
+                                    <div class="col-md-10">
+                                        <span>Şimdi Paylaş (Herkese açık)</span>
+                                    </div>
                                 </div>
-                                <div class="col-md-10">
-                                    <span>Şimdi Paylaş (Herkese açık)</span>
+                            </a>
+                            <a href="#" class="dropdown-item">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <i class='bx bx-share-alt'></i>
+                                    </div>
+                                    <div class="col-md-10">
+                                        <span>Paylaş...</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <i class='bx bx-share-alt'></i>
+                            </a>
+                            <a href="#" class="dropdown-item">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <i class='bx bx-message'></i>
+                                    </div>
+                                    <div class="col-md-10">
+                                        <span>Mesaj olarak gönder</span>
+                                    </div>
                                 </div>
-                                <div class="col-md-10">
-                                    <span>Paylaş...</span>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <i class='bx bx-message'></i>
-                                </div>
-                                <div class="col-md-10">
-                                    <span>Mesaj olarak gönder</span>
-                                </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
                 </div>
+                @await Component.InvokeAsync("_CommentSection", item)
             </div>
-            @await Component.InvokeAsync("_CommentSection", item)
-        </div>
     }
+</div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
