--- a/PaylasimKuresi/Views/Shared/Components/_Sidebar/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_Sidebar/Default.cshtml
@@ -1,3 +1,5 @@
+@model GetUserDto
+
 <div class="col-md-2 newsfeed-left-side sticky-top shadow-sm" id="sidebar-wrapper">
     <div class="card newsfeed-user-card h-100">
         <ul class="list-group list-group-flush newsfeed-left-sidebar">
@@ -5,7 +7,7 @@
                 <h6>Ana Sayfa</h6>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center sd-active">
-                <a href="/Home/" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/newsfeed.png"
+                <a href="/Home/Index" class="sidebar-item"><img src="/template/assets/images/icons/left-sidebar/newsfeed.png"
                         alt="newsfeed"> Akış</a>
                 <a href="#" class="newsfeedListicon"><i class='bx bx-dots-horizontal-rounded'></i></a>
             </li>
@@ -38,9 +40,9 @@
                 <span class="badge badge-primary badge-pill"><i class='bx bx-chevron-right'></i></span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center newsLink">
-                <a href="https://github.com/ArtMin96/argon-social" target="_blank" class="sidebar-item"><i
-                        class='bx bx-file text-primary'></i> Haberler</a>
-                <span class="badge badge-primary badge-pill"><i class='bx bx-chevron-right'></i></span>
+                <a href="/Profile/Index?id=@Model.Id" class="sidebar-item"><i
+                        class='bx bx-user text-primary'></i> Profil </a>
+                <span class="badge badge-primary badge-pill"></span>
             </li>
         </ul>
     </div>
