Profile page and navbar completed

--- a/PaylasimKuresi/Views/ProfileLayoutPartial/_HeadPartial.cshtml
+++ b/PaylasimKuresi/Views/ProfileLayoutPartial/_HeadPartial.cshtml
@@ -8,7 +8,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
-    <link href='https://cdn.jsdelivr.net/npm/boxicons@1.9.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Styles -->
     <link href="/template/assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
