--- a/PaylasimKuresi/Views/_ViewImports.cshtml
+++ b/PaylasimKuresi/Views/_ViewImports.cshtml
@@ -5,3 +5,6 @@
 @using Models.DTOs.UserDTOs
 @using Models.DTOs.DmDTOs
 @using Models.DTOs.CommunityDTOs
+@using Models.DTOs.FollowDTOs
+@using Models.DTOs.CommunityUserDTOs
+@using Models.DTOs.PostLikeDTOs
