--- a/PaylasimKuresi/Views/Home/Index.cshtml
+++ b/PaylasimKuresi/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                     <img src=@item.User.ProfilePictureUrl alt="Online user" class="mr-3 post-user-image">
                     <div class="media-body pb-3 mb-0 small lh-125">
                         <div class="d-flex justify-content-between align-items-center w-100">
-                            <a href="/Profile/Index?id=@item.User.Id" class="text-gray-dark post-user-name">@item.User.FirstName @item.User.LastName</a>
+                            <a href="/Profile/Index/@item.User.Id" class="text-gray-dark post-user-name">@item.User.FirstName @item.User.LastName</a>
                             <div class="dropdown">
                                 <a href="#" class="post-more-settings" role="button" data-toggle="dropdown" id="postOptions"
                                     aria-haspopup="true" aria-expanded="false">
