--- a/PaylasimKuresi/Views/Shared/Components/_CommentSection/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_CommentSection/Default.cshtml
@@ -11,7 +11,7 @@
                     <div class="panel-body" style="overflow-y: auto; -ms-overflow-style: none; scrollbar-width: none; ">
                         <ul class="media-list comments-list">
                             <li class="media comment-form">
-                                <a href="#" class="pull-left">
+                                <a href="/Profile/Index/@Model.User.Id" class="pull-left">
                                     <img src="@Model.User.ProfilePictureUrl" alt="" class="img-circle">
                                 </a>
                                 <div class="media-body">
