--- a/PaylasimKuresi/Views/Shared/Components/_Navbar/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_Navbar/Default.cshtml
@@ -83,7 +83,7 @@
                 </div>
             </a>
             <div class="dropdown-menu dropdown-menu-right nav-drop">
-                <a class="dropdown-item" href="profile.html"><i class='bx bx-user mr-2'></i> Hesap</a>
+                <a class="dropdown-item" href="/Profile/Index/@Model.Id"><i class='bx bx-user mr-2'></i> Hesap</a>
                 <div role="separator" class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#"><i class='bx bx-undo mr-2'></i> Çıkış yap</a>
             </div>
